# final_progect

./: .env_example  dao.py  database.py  main.py  pyproject.toml
api/: travels.py
templates/: navbar.html
web/: web_travels.py
