[tool.poetry]
name = "final-progect"
version = "0.1.0"
description = ""
authors = ["Dima2024-python <chagaydapython2024@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.112.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
